[tool.poetry]
name = "asgi_runserver"
version = "0.1.1"
description = ""
authors = ["Joshua Massover <massover@simplebet.io>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
daphne = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
